ChangeLog for pommed
--------------------

version 1.35:
	- pommed: fix crash if no fnmode sysfs node found.

version 1.34:
	- pommed: be more careful when invoking eject (Alioth #312213).
	- pommed: add the nouveau sysfs backlight driver.

version 1.33:
	- pommed: added support for the MacBook6,1 (October 2009).
	- pommed: added support for the MacBookPro6,1 & 6,2 (Core i5/i7,
	April 2010).
	- pommed: kill PCI device check in nv8600mgt.
	- pommed: added support for the MacBookPro7,1 (13", Core2 Duo,
	April 2010). Requires a patched nvidia-bl module for backlight
	support at the moment.
	- gpomme: replaced Glade with hardcoded GTK+ code.

version 1.32:
	- pommed: add the rivabl sysfs backlight driver for older 12"
	PowerBook G4 laptops. Reported by Nic Boet.

version 1.31:
	- pommed: add IDs for newer wireless keyboard.
	- pommed: add the MacBookPro5,4 (15" June 2009).

version 1.30:
	- pommed: fix a crasher in the i2c probe routine on pmac.
	- pommed: fix sysfs backlight driver to handle > 3-digit values.

version 1.29:
	- pommed: add support for newer nvidia backlight driver which
	changed the sysfs layout.
	- pommed: move VT state checking to pommed, exposed over DBus.
	- gpomme: switch to asking pommed for the state of the VT.
	- wmpomme: switch to asking pommed for the state of the VT.

version 1.28:
	- pommed: added support for the MacBookPro5,3 (15" MacBookPro
	June 2009) 

version 1.27:
	- pommed: added support for the MacBook5,2 (white MacBook).
	- pommed: added support for the MacBookPro5,5 (13" MacBookPro June
	2009), MacBookPro5,2 (17" MacBookPro June 2009).

version 1.26:
	- pommed: only keystrokes on the built-in keyboard should reset
	the keyboard idle timer.
	- pommed: add USB IDs for the Apple external aluminium mini
	keyboard.
	- pommed: switch to sysfs resource files for PCI memory access
	instead of mmaping /dev/mem.

version 1.25:
	- pommed: check current hardware backlight level before setting AC