@@ -34,6 +34,7 @@ Supported machines:
    * MacBook Core2 Duo Santa Rosa (November 2007)
    * MacBook Core2 Duo (February 2008, October 2008, October 2009)
    * MacBook Air Core2 Duo (January 2008, October 2008)
+   * MacBook Air Core2 Duo 11" & 13" (October 2010)
 
    If your MacBook Pro/MacBook Air/MacBook is not listed here, please contact us
    and include the content of /sys/class/dmi/id/product_name in your mail. Thanks.
