@@ -430,6 +430,7 @@ mbp_sysfs_backlight_probe(void)
       case MACHINE_MACBOOK_5:
       case MACHINE_MACBOOK_6:
       case MACHINE_MACBOOKAIR_2:
+      case MACHINE_MACBOOKAIR_3:
 	logmsg(LOG_INFO, "sysfs backlight probe failed, falling back to nv8600mgt");
 
 	ret = nv8600mgt_backlight_probe();
